--- a/Weather-master/src/index.html
+++ b/Weather-master/src/index.html
@@ -8,9 +8,9 @@
     <title>Weather App</title>
 </head>
 <body>
-    <div class="container p-4"> 
+    <div class="container-fluid p-4"> 
         <div class="row">
-            <div class="col-md-4 mx-auto text-center">
+            <div class="col-md-6 mx-auto text-center">
                 <div class="card">
                     <div class="card-body">
                         <h1 id="weather-location" class="h3">
@@ -35,7 +35,7 @@
                                 <input type="text" name="" id="city" class="form-control" placeholder="City">
                             </div>
                             <div class="form-group">
-                                <input type="text" name="" id="ccountryCode" class="form-control" placeholder="Country Code">
+                                <input type="text" name="" id="countryCode" class="form-control" placeholder="Country Code">
                             </div>
                             <div class="form-group">
                                 <button id="w-change-btn" class="btn btn-dark btn-block">
